# socFundScrapy

./: .gitignore  README.md  SEAASEAN_clean.bak  SEAASEAN_clean.csv  SEAASEAN_raw.csv  clean.py  data.json  data_formatted.csv  job_info.json  main.py  pyproject.toml  pyvenv.cfg  requirements.txt  response.html  scrapy.cfg
Scripts/: activate  activate.bat  jp.py
socFundScraper/: items.py  middlewares.py  pipelines.py  settings.py
socFundScraper/spiders/: socFundSpider.py
