[project]
name = "socfundscrapy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fake-useragent==1.5.1",
    "ipykernel>=6.29.5",
    "itemadapter==0.9.0",
    "jmespath==1.0.1",
    "polars>=1.17.1",
    "pywin32==308",
    "scrapy==2.12.0",
]
